          anywhere.

27 Apr 2010 JK
        - Implemented new function glbSetEnergyWindow

5 Jul 2010 JK
        - New functions glbSetCoefficientInRule

14 Sep 2010 JK
        - GLoBES now accepts cross section and flux files with an arbitrary number of
          lines

********** This version tagged 3.1.7 ************

25 Sep 2010 JK
        - Implemented a bunch of functions that allow the user to assign
          names to parameters, and then use these names in subsequent calls
          to glbSetOscParamByName, glbGetOscParamByName

26 Sep 2010 JK
        - New function glbGetFilenameOfExperiment
        - Changes to Lexer and parser:
          * New directive $citation
          * Strings (with double quotes '"') may now contain arbitrary characters,
            including line breaks. This was necessary to allow for multi-line
            citation information in glb files.
        - New function glbGetCitationForExperiment

********** This version tagged 3.1.8 ************

08 Oct 2010 JK
        - New function glbGetVerbosityLevel
        - Standalone globes binary no longer complains if user-defined chi^2
          function is used

11 Oct 2010 JK
        - Rebuilt the autoconf/automake system.
          It is important to use libtoolize -c -f to get copies of dependencies
          rather than just symlinks.

15 Oct 2010 JK
        - Added degfinder and NSI probability engine to distribution

22 Oct 2010 JK
        - Added %option nounistd to glb_lexer.l since getopt.h, included from
          unistd.h, was causing trouble on Macs

03 Nov 2010 JK
        - Degfinder and NSI probability engine removed from distribution
          again; will be made available as separate add-ons

20 Nov 2010 JK
        - New functions glbSetProjectionFlagByName, glbGetProjectionFlagByName

********** This version tagged 3.1.9 ************

20 Nov 2010 JK
        - Removed all code related to simulated annealing
        - Default minimizer is now GLB_POWELL
